--- a/app/src/main/res/drawable/campobotaoazul.xml
+++ b/app/src/main/res/drawable/campobotaoazul.xml
@@ -3,8 +3,7 @@
     <size
             android:height="50dp"
             android:width="50dp"
-            android:textSize="14sp"  />
-
-    <solid android:color="@color/colorLetrasint"/>
-
+            android:textSize="34sp"  />
+    <solid android:color="#1087E6"/>
+    <corners android:radius="50dp"/>
 </shape>
