--- a/app/src/main/res/layout/activity_apre.xml
+++ b/app/src/main/res/layout/activity_apre.xml
@@ -7,40 +7,34 @@
         android:layout_height="match_parent"
         tools:context=".ApreActivity">
 
-    <ImageButton
-            android:layout_width="99dp"
-            android:layout_height="88dp"
-            android:orientation="horizontal"
-            android:padding="10dp"
-            app:srcCompat="@drawable/qrcode1"
-            android:id="@+id/imbtnQrcode"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
     <Button
             android:text="@string/btnCadastar"
-            android:layout_width="161dp"
-            android:layout_height="36dp"
-            android:background="@drawable/campotexto"
-            android:id="@+id/btnCadastar" android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/imbtnQrcode"
+            android:layout_width="183dp"
+            android:layout_height="51dp"
+            android:background="@drawable/campobotao"
+            android:id="@+id/btnCadastar"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
-            android:textSize="20sp" android:textColor="#FFFFFF"/>
+            android:textSize="20sp" android:textColor="#FFFFFF" android:layout_marginTop="32dp"
+            app:layout_constraintHorizontal_bias="0.5"/>
     <Button
             android:text="@string/btnLogin"
-            android:layout_width="249dp"
-            android:layout_height="36dp"
-            android:id="@+id/btnLogin" android:layout_marginTop="8dp"
+            android:layout_width="277dp"
+            android:layout_height="48dp"
+            android:id="@+id/btnLogin" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/btnCadastar" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/campotexto" android:textSize="20sp" android:textStyle="bold"
-            android:textColor="#FFFFFF"/>
+            android:background="@drawable/campobotao" android:textSize="20sp" android:textStyle="bold"
+            android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.5"/>
     <LinearLayout
             android:orientation="vertical"
             android:padding="5dp"
-            android:layout_width="398dp"
-            android:layout_height="325dp" tools:layout_editor_absoluteX="8dp"
-            android:id="@+id/linearLayout" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
+            android:layout_width="382dp"
+            android:layout_height="389dp"
+            android:id="@+id/linearLayout" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent">
         <TextView
                 android:text="Bem Vindo a Plataforma 150ESaude!"
                 android:background="@drawable/campotexto"
@@ -53,8 +47,8 @@
                 android:padding="25dp"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/colorCaixatexto"
-                android:layout_width="303dp"
-                android:layout_height="233dp" android:id="@+id/txTexPag" android:text="@string/txTexPag"
-                android:textAlignment="center" android:textStyle="bold" android:textSize="14sp"/>
+                android:layout_width="328dp"
+                android:layout_height="313dp" android:id="@+id/txTexPag" android:text="@string/txTexPag"
+                android:textAlignment="center" android:textStyle="bold" android:textSize="18sp"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
