--- a/app/src/main/res/layout/activity_logo.xml
+++ b/app/src/main/res/layout/activity_logo.xml
@@ -10,8 +10,8 @@
 
     <TextView
             android:text="Efetuar Cadastro"
-            android:layout_width="305dp"
-            android:layout_height="42dp"
+            android:layout_width="310dp"
+            android:layout_height="49dp"
             android:id="@+id/txCadastrolog"
             android:background="@drawable/campotexto"
             android:textSize="30sp" android:textStyle="bold" android:textAlignment="center"
@@ -31,8 +31,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
-            android:textSize="14sp" app:layout_constraintTop_toBottomOf="@+id/spinner_sexo"
-            android:layout_marginTop="12dp" app:layout_constraintHorizontal_bias="0.5"/>
+            android:textSize="14sp" app:layout_constraintTop_toBottomOf="@+id/txDesCadas"
+            android:layout_marginTop="16dp"/>
 
 
     <EditText
@@ -64,21 +64,6 @@
             app:layout_constraintTop_toBottomOf="@+id/edPeso" android:layout_marginTop="14dp"/>
 
     <EditText
-            android:layout_width="331dp"
-            android:layout_height="33dp"
-            android:inputType="textPersonName"
-            android:hint="@string/edEndereco"
-            android:ems="10"
-            android:id="@+id/edEndereco"
-            android:background="@drawable/campohint"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
-            android:textSize="14sp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/edIdade" app:layout_constraintHorizontal_bias="0.5"/>
-
-    <EditText
             android:layout_width="235dp"
             android:layout_height="39dp"
             android:inputType="textPersonName"
@@ -100,7 +85,7 @@
             android:background="@drawable/campobotao"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner_cidades" android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_cidades" android:layout_marginTop="24dp"
             android:textAlignment="center" android:textStyle="bold"
             android:textSize="20sp" app:layout_constraintHorizontal_bias="0.5" android:gravity="center"
             android:textColor="#FFFFFF"/>
@@ -115,34 +100,34 @@
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
             android:textAlignment="center" android:textSize="18sp" android:gravity="center"/>
     <Spinner
-            android:layout_width="322dp"
-            android:layout_height="37dp"
+            android:layout_width="319dp"
+            android:layout_height="42dp"
             android:background="@drawable/campospinner"
             android:gravity="center"
             android:textAlignment="center"
             android:entries="@array/Spinner_estado"
-            android:id="@+id/spinner_estados" android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/edEndereco" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
+            android:id="@+id/spinner_estados" android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_bairro" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.494" app:layout_constraintEnd_toEndOf="parent"/>
     <Spinner
-            android:layout_width="308dp"
-            android:layout_height="31dp"
+            android:layout_width="314dp"
+            android:layout_height="38dp"
             android:background="@drawable/campospinner"
             android:gravity="center"
             android:entries="@array/Spinner_cidades"
             android:textAlignment="center"
-            android:id="@+id/spinner_cidades" android:layout_marginTop="12dp"
+            android:id="@+id/spinner_cidades" android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/spinner_estados" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
     <Spinner
-            android:layout_width="224dp"
-            android:layout_height="36dp"
+            android:layout_width="325dp"
+            android:layout_height="42dp"
             android:background="@drawable/campospinner"
             android:gravity="center"
-            android:entries="@array/Spinner_sexo"
+            android:entries="@array/Spinner_bairro"
             android:textAlignment="center"
-            android:id="@+id/spinner_sexo" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txDesCadas" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/spinner_bairro" android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/edIdade" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
