--- a/app/src/main/res/layout/activity_apre.xml
+++ b/app/src/main/res/layout/activity_apre.xml
@@ -37,12 +37,11 @@
             app:layout_constraintEnd_toEndOf="parent">
         <TextView
                 android:text="Bem Vindo a Plataforma 150ESaude!"
-                android:background="@drawable/campotexto"
                 android:layout_gravity="center_horizontal"
-                android:textColor="#FFFFFF"
-                android:layout_width="315dp"
+                android:textColor="#077E73"
+                android:layout_width="343dp"
                 android:layout_height="wrap_content" android:id="@+id/txTitext01" android:textAlignment="center"
-                android:textStyle="bold" android:textSize="25sp"/>
+                android:textStyle="bold" android:textSize="30sp"/>
         <TextView
                 android:padding="25dp"
                 android:layout_gravity="center_horizontal"
