--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -13,11 +13,10 @@
             android:layout_width="328dp"
             android:layout_height="57dp"
             android:id="@+id/txCadastrolog"
-            android:background="@drawable/campotexto"
-            android:textSize="30sp" android:textStyle="bold"
+            android:textSize="36sp" android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
-            app:layout_constraintTop_toTopOf="parent" android:textAlignment="center" android:textColor="#ffffff"
+            app:layout_constraintTop_toTopOf="parent" android:textAlignment="center" android:textColor="#09776D"
             android:gravity="center"/>
 
     <EditText
