--- a/app/src/main/res/layout/activity_logo.xml
+++ b/app/src/main/res/layout/activity_logo.xml
@@ -10,14 +10,13 @@
 
     <TextView
             android:text="Efetuar Cadastro"
-            android:layout_width="310dp"
-            android:layout_height="49dp"
+            android:layout_width="319dp"
+            android:layout_height="60dp"
             android:id="@+id/txCadastrolog"
-            android:background="@drawable/campotexto"
-            android:textSize="30sp" android:textStyle="bold" android:textAlignment="center"
+            android:textSize="36sp" android:textStyle="bold" android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
-            app:layout_constraintTop_toTopOf="parent" android:textColor="#ffffff" android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent" android:textColor="#0A6B62" android:gravity="center"
             app:layout_constraintHorizontal_bias="0.5"/>
 
     <EditText
