--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -24,13 +24,13 @@
             android:layout_height="37dp"
             android:inputType=""
             android:hint="@string/edEmail"
-            android:background="@drawable/campohint"
+            android:background="@drawable/campo_edittext"
             android:ems="10"
             android:id="@+id/edEmail" android:layout_marginTop="56dp"
             app:layout_constraintTop_toBottomOf="@+id/txCadastrolog" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textStyle="bold" android:textAlignment="center"
-            android:textSize="14sp" android:textColor="#FF0D1C70"/>
+            android:textSize="14sp" android:textColor="@color/colorLetrasverde"/>
 
     <EditText
             android:layout_width="235dp"
@@ -39,10 +39,10 @@
             android:hint="@string/edNome"
             android:ems="10"
             android:id="@+id/edNome"
-            android:background="@drawable/campohint"
+            android:background="@drawable/campo_edittext"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
+            android:textStyle="bold" android:textAlignment="center" android:textColor="@color/colorLetrasverde"
             android:textSize="14sp" android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/edEmail"/>
 
     <EditText
@@ -52,10 +52,10 @@
             android:hint="@string/edSenha"
             android:ems="10"
             android:id="@+id/edSenha"
-            android:background="@drawable/campohint"
+            android:background="@drawable/campo_edittext"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
+            android:textStyle="bold" android:textAlignment="center" android:textColor="@color/colorLetrasverde"
             android:textSize="14sp" android:layout_marginTop="40dp"
             app:layout_constraintTop_toBottomOf="@+id/edNome"/>
 
@@ -66,10 +66,10 @@
             android:hint="@string/edConfSenha"
             android:ems="10"
             android:id="@+id/edConfSenha"
-            android:background="@drawable/campohint"
+            android:background="@drawable/campo_edittext"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
+            android:textStyle="bold" android:textAlignment="center" android:textColor="@color/colorLetrasverde"
             android:textSize="14sp"
             android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/edSenha"/>
 
