--- a/app/src/main/res/layout/activity_login1.xml
+++ b/app/src/main/res/layout/activity_login1.xml
@@ -25,12 +25,12 @@
             android:layout_height="49dp"
             android:inputType=""
             android:hint="@string/edEmail"
-            android:background="@drawable/campohint"
+            android:background="@drawable/campo_edittext"
             android:ems="10"
             android:id="@+id/edEmail" android:layout_marginTop="112dp"
             app:layout_constraintTop_toBottomOf="@+id/txTiLog" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
+            android:textStyle="bold" android:textAlignment="center" android:textColor="@color/colorLetrasverde"
             android:textSize="14sp" app:layout_constraintHorizontal_bias="0.5"/>
 
     <EditText
@@ -40,10 +40,10 @@
             android:hint="@string/edConfSenha"
             android:ems="10"
             android:id="@+id/edConfSenha"
-            android:background="@drawable/campohint"
+            android:background="@drawable/campo_edittext"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
+            android:textStyle="bold" android:textAlignment="center" android:textColor="@color/colorLetrasverde"
             android:textSize="14sp"
             android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/edEmail"
             app:layout_constraintHorizontal_bias="0.5"/>
