--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -15,7 +15,7 @@
             android:layout_width="362dp"
             android:layout_height="77dp"
             android:orientation="vertical"
-            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/txacumulados" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp" android:textAlignment="center" android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
             android:layout_height="33dp"
             android:orientation="vertical"
             android:id="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/txacumulados" android:layout_marginTop="12dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
             android:textSize="18sp" app:layout_constraintHorizontal_bias="0.495" android:gravity="center"
@@ -89,7 +89,7 @@
             android:layout_width="230dp"
             android:layout_height="50dp"
             android:background="@drawable/campobotaoazul"
-            android:id="@+id/btnCalendario" android:layout_marginTop="32dp"
+            android:id="@+id/btnCalendario1" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/txTempotoAcum" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
             android:textStyle="bold" android:textAlignment="center" android:textColor="#FFFFFF"/>
