--- a/app/src/main/res/layout/app_bar_principal.xml
+++ b/app/src/main/res/layout/app_bar_principal.xml
@@ -27,8 +27,9 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_dialog_email"/>
+            app:srcCompat="@android:drawable/ic_dialog_email"
+            android:layout_gravity="bottom|end"
+            android:paddingLeft="10dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
