--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -8,10 +8,11 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_principal"
         android:background="@color/colorFundo"
+        android:id="@+id/FragmentContainer"
         tools:context=".PrincipalActivity">
 
     <TextView
-            android:text="Começe agora sua atividade!"
+            android:text="Começe agora suas atividade!"
             android:layout_width="362dp"
             android:layout_height="77dp"
             android:orientation="vertical"
@@ -21,17 +22,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:textSize="30sp" app:layout_constraintHorizontal_bias="0.492" android:gravity="center"
             android:textColor="#07A293"/>
-    <TextView
-            android:text="Escolha sua atividade"
-            android:layout_width="292dp"
-            android:layout_height="33dp"
-            android:orientation="vertical"
-            android:id="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/txacumulados" android:layout_marginTop="12dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
-            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.495" android:gravity="center"
-            android:textColor="#07756B"/>
     <Spinner
             android:layout_width="312dp"
             android:layout_height="43dp"
@@ -40,59 +30,60 @@
             android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/campospinner" app:layout_constraintTop_toBottomOf="@+id/textView2"
-            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.493" android:gravity="center"
+            android:background="@drawable/campospinner" app:layout_constraintTop_toBottomOf="@+id/txacumulados"
+            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.494" android:gravity="center"
             android:padding="10dp"/>
     <Button
             android:text="@string/btnInicioAtivi"
-            android:layout_width="247dp"
-            android:layout_height="39dp"
+            android:layout_width="246dp"
+            android:layout_height="42dp"
             android:background="@drawable/campoamarelo"
-            android:id="@+id/btnInicioAtivi" android:layout_marginTop="20dp"
+            android:id="@+id/btnInicioAtivi" android:layout_marginTop="36dp"
             app:layout_constraintTop_toBottomOf="@+id/spinner_itens_ati" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="center" android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.5"
             android:textStyle="bold"/>
     <Button
             android:text="@string/btnFinalAtivi"
-            android:layout_width="249dp"
-            android:layout_height="38dp"
+            android:layout_width="248dp"
+            android:layout_height="47dp"
             android:background="@drawable/campovermelho"
             android:id="@+id/btnFinalAtivi" android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/btnInicioAtivi" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="center" android:textColor="#FFFFFF"
-            android:textStyle="bold"/>
-    <TextView
-            android:text="Tempo Total da Atividade"
-            android:layout_width="260dp"
-            android:layout_height="40dp"
-            android:id="@+id/txTempoAt"
-            android:background="@drawable/campotexto"
-            app:layout_constraintTop_toBottomOf="@+id/btnFinalAtivi" android:layout_marginTop="32dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
-            android:textSize="18sp" android:gravity="center" android:textColor="#FFFFFF"/>
-    <TextView
-            android:text="Tempo Total Acumulado"
-            android:layout_width="259dp"
-            android:layout_height="37dp"
-            android:id="@+id/txTempotoAcum"
-            android:background="@drawable/campotexto"
-            app:layout_constraintTop_toBottomOf="@+id/txTempoAt" android:layout_marginTop="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
-            android:textSize="18sp" android:gravity="center" android:textColor="#FFFFFF"
-    />
+            android:textStyle="bold" app:layout_constraintHorizontal_bias="0.5"/>
     <Button
             android:text="@string/btnCalendario"
             android:layout_width="230dp"
             android:layout_height="50dp"
             android:background="@drawable/campobotaoazul"
-            android:id="@+id/btnCalendario1" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/txTempotoAcum" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/btnCalendario1" android:layout_marginTop="52dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnFinalAtivi" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
             android:textStyle="bold" android:textAlignment="center" android:textColor="#FFFFFF"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="395dp"
+            android:layout_height="80dp" tools:layout_editor_absoluteX="8dp"
+            android:id="@+id/lay2" android:layout_marginTop="82dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnCalendario1">
+
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigation"
+                app:menu="@menu/button_nav_menuprincipal"
+                android:background="@color/colorPrimary"
+                app:itemIconTint="@android:color/white"
+                app:itemTextColor="@android:color/white"
+                android:layout_width="414dp"
+                android:layout_height="100dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="Button"
+        />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
