--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -15,9 +15,9 @@
             android:id="@+id/txCadastrolog"
             android:textSize="36sp" android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
             app:layout_constraintTop_toTopOf="parent" android:textAlignment="center" android:textColor="#09776D"
-            android:gravity="center"/>
+            android:gravity="center" app:layout_constraintHorizontal_bias="0.5"/>
 
     <EditText
             android:layout_width="239dp"
@@ -26,11 +26,12 @@
             android:hint="@string/edEmail"
             android:background="@drawable/campo_edittext"
             android:ems="10"
-            android:id="@+id/edEmail" android:layout_marginTop="56dp"
+            android:id="@+id/edEmail" android:layout_marginTop="44dp"
             app:layout_constraintTop_toBottomOf="@+id/txCadastrolog" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textStyle="bold" android:textAlignment="center"
-            android:textSize="14sp" android:textColor="@color/colorLetrasverde"/>
+            android:textSize="14sp" android:textColor="@color/colorLetrasverde"
+            app:layout_constraintHorizontal_bias="0.5"/>
 
     <EditText
             android:layout_width="235dp"
@@ -79,7 +80,7 @@
             android:layout_width="274dp"
             android:layout_height="50dp"
             android:background="@drawable/campobotao"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="80dp"
             app:layout_constraintTop_toBottomOf="@+id/edConfSenha" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
             android:textAlignment="center" android:textStyle="bold" android:textSize="24sp"
