--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,12 @@
             android:text="@string/app_name"
             android:background="@drawable/textoprincipal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.043" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/txTePri"
             android:textColor="@color/colorLetrasint" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
-            android:textAlignment="center" android:textStyle="bold" android:textSize="36sp"/>
+            android:textAlignment="center" android:textStyle="bold" android:textSize="36sp" />
     <ImageView
             android:layout_width="343dp"
             android:layout_height="372dp" app:srcCompat="@mipmap/ic_launcher"
@@ -28,12 +28,15 @@
     <TextView
             android:text="@string/txTePtex"
             android:background="@drawable/textoprincipais"
-            android:layout_width="349dp"
-            android:layout_height="106dp"
+            android:layout_width="310dp"
+            android:layout_height="116dp"
             android:id="@+id/txTePtex"
             app:layout_constraintTop_toBottomOf="@+id/txTePri" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textAlignment="center" android:textStyle="bold" android:textColor="@color/colorLetrasint"
-            android:textSize="30sp" android:layout_marginTop="16dp"/>
+            android:textSize="30sp" android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.0" android:gravity="center"
+            app:layout_constraintHorizontal_bias="0.495"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
