--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -65,6 +65,7 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="395dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_height="80dp" tools:layout_editor_absoluteX="8dp"
             android:id="@+id/lay2" android:layout_marginTop="42dp"
             app:layout_constraintTop_toBottomOf="@+id/btnCalendario1">
@@ -78,6 +79,7 @@
                 app:itemTextColor="@android:color/white"
                 android:layout_width="414dp"
                 android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageView2"
                 app:layout_constraintStart_toStartOf="parent"
