--- a/app/src/main/res/layout/fragment_pontos.xml
+++ b/app/src/main/res/layout/fragment_pontos.xml
@@ -20,5 +20,14 @@
                 android:id="@+id/textView" android:textAlignment="center"
                 android:textStyle="bold" android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
+        <TextView
+                android:text="Verificque sua pontiação acumulada"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView2"
+                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="72dp"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
+                android:textSize="18sp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
